--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,8 +2,8 @@ name: Update Learning Progress
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
-  workflow_dispatch:     # Allows manual run
+    - cron: "0 0 * * *"  
+  workflow_dispatch:     
 
 jobs:
   update-readme:
